--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,30 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Vainglory Fonts</title>
+
+    <!-- OBEB4 Bootstrap CSS -->
+		<link href="css/obeb4.css" rel="stylesheet">
+		
+		
+		<!-- FontAwesome 5 -->
+		<script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
+		
+		<!-- Google Fonts -->
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700|Oswald:400,700" rel="stylesheet">
+		
+		<!-- WHH Icon Font -->
+		<link href="css/whhg.css" rel="stylesheet">
+		
+		<!-- Plugin CSS -->
+		<link href="css/awesomplete.css" rel="stylesheet">
+		<link href="css/obe-input-reset.css" rel="stylesheet">
+		
+		<!-- Plugin CSS -->
+		<link href="css/app.css" rel="stylesheet">
+		<link href="css/app-responsive.css" rel="stylesheet">
   </head>
-  <body>
+  <body class="bg-dark text-light">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
