Adding new files, highlighting, icon font, etc.

--- a/public/index.html
+++ b/public/index.html
@@ -31,12 +31,8 @@
 		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700|Oswald:400,700" rel="stylesheet">
 		
-		<!-- WHH Icon Font -->
-		<link href="css/whhg.css" rel="stylesheet">
-		
-		<!-- Plugin CSS -->
-		<link href="css/awesomplete.css" rel="stylesheet">
-		<link href="css/obe-input-reset.css" rel="stylesheet">
+		<!-- Vainglory Icons Font -->
+		<link href="css/vainglory-icons-font.css" rel="stylesheet">
 		
 		<!-- Plugin CSS -->
 		<link href="css/app.css" rel="stylesheet">
